--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,21 +57,17 @@
             android:contentDescription="@string/description"
             android:src="@drawable/dhis2_logo" />
 
-        <org.hisp.dhis.android.sdk.ui.views.FontEditText
+
+        <Spinner
             android:id="@+id/server_url"
-            android:layout_width="match_parent"
+            android:layout_width="360dp"
             android:layout_height="44dp"
-            android:layout_marginBottom="1px"
-            android:background="@drawable/edittext_login_custom_shape"
-            android:drawableLeft="@drawable/ic_server"
-            android:drawablePadding="7dp"
-            android:gravity="center_vertical"
-            android:hint="@string/server_url"
-            android:inputType="textUri"
-            android:paddingLeft="7dp"
+            android:entries = "@array/url_array"
             android:singleLine="true"
-            android:textSize="@dimen/medium_text_size"
-            app:font="@string/regular_font_name" />
+            android:layout_marginBottom="1px"
+            android:paddingLeft="35dp"
+            android:spinnerMode="dropdown"
+            style= "@style/serverurl_spinner_style" />
 
         <org.hisp.dhis.android.sdk.ui.views.FontEditText
             android:id="@+id/username"
