Change dhis2 splash activity logo to ndoh logo

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -43,6 +43,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="fill"
-        android:src="@drawable/dhis2_logo" />
+        android:src="@drawable/ndoh_hi_res_512" />
 
 </FrameLayout>
